*Empty MediaWiki Message*

--- a/Сабанцев,_Геннадий_Леонидович.mw
+++ b/Сабанцев,_Геннадий_Леонидович.mw
@@ -22,3 +22,26 @@
 }}
 '''Геннадий Сабанцев''' ([[1958]] ий [[8 Вӱдшор]], [[Кужэҥер кундем]] Йырмарий ял) — кумдан палыме [[поэт]] да журналист, Марий Элын сулло журналистше. Лудшо-влак тудым Геннадий Сабанцев-Ояр псевдоним дене палат.
 Шкеже тудо Куженер район гыч. Шке жапыштыже «Пачемыш» ден «Пионер йӱк» журналлаште, «Ямде лий» да «Кугарня» газет-влак редакцийыште тыршен. «Кинде-шинчал», «Чытамсыр курым», «Нумалтыш» [[почеламут]] сборник-влакын авторжо.
+
+== Сылнымут паша ==
+=== Тӱҥ произведенийже-влак ===
+Чытамсыр курым : почеламут-вл. [Беспокойный век : стихи]. Йошкар-Ола, 1987. 96 с.
+Нумалтыш : почеламут-вл., поэма [Ноша : стихи, поэма]. Йошкар-Ола, 1993. 160 с.
+Шӱмсавыш : почеламут-вл., статья, кусарыме почеламут ден поэме  [Отзвуки сердца : стихи, переводы, статьи]. Йошкар-Ола, 2008. 336 с.
+=== Руш йылмыш кусарымашыште ===
+Светом единым : стихи / пер. Г.Смирнова. Йошкар-Ола, 2003. 88 с.
+== Илышыж да сылнымут пашаж нереген литератур ==
+* Учаев З. Поэзий - илыш муро // Марий коммуна. 1979. 8 февр.
+* Николаев С.  А вет сай - пырля нумалтыш // Мутын нелыже да ямлыже. Йошкар-Ола, 1993. С. 204-220.
+* Егоров В. Нумалтышын нелытше // Кугарня. 1993. 21 май.
+* Сабанцев Г. «Чонна гыч айста почкена ме удам...» // Кугарня. 1997. 21 март.
+* Писатели Республики Марий Эл : автобиобиблиогр. сборник. Йошкар-Ола, 2004. С. 59-60.
+* Манаева-Чеснокова С. Ноша поэта Геннадия Ояра. // Художественный мир современной марийской поэзии : монография. Йошкар-Ола, 2004. С. 162-169.
+* Сабанцев-Ояр Г. Айдеме чылажымат чыта, а пушеҥге огеш // Ончыко. 2004. № 9. С. 116-118.
+МБЭ. Йошкар-Ола, 2007. С. 312.
+* Кечыйол тошкалтыш дене сур турий семын нӧлталт сылнымут кавашке : поэт Геннадий Сабанцев-Оярлан - 50 ий // Ончыко. 2008. № 3. С. 20-21.
+
+== Кылвер-влак ==
+* [http://www.pisatelimariel.org/pisateli.php?sel=preview&id_pisatel=150 Писатели Марий Эл сайт]
+[[Категорий:Марий серызе]]
+[[Категорий:Марий журналист]]
