--- a/Сабанцев-Ояр,_Геннадий_Леонидович.mw
+++ b/Сабанцев-Ояр,_Геннадий_Леонидович.mw
@@ -1,7 +1,1 @@
-'''Геннадий Леонидович Сабанцев-Ояр''' — почеламутчо, кусарыше. [[1958|1958]] ий [[8 вӱдшор|8 вӱдшор тылзыште]] [[Марий Эл|Марий Эл]], [[Кужэҥер район|Кужэҥер районысо]] [[Йырмарий ял (Кужэҥер кундем)|Йырмарий ялеш]] шочын. Марий Элын сулло журналистше. [[Марий радио|Марий радион]] сылнымут да театр йодыш дене редакторжо. [[Йошкар-Ола|Йошкар-Олаште]] ила.
-
-==Негыз==
-* [[Ончыко|Ончыко]] [[2000|2000]] № 1.
-
-
-[[Category:Марий серызе|Сабанцев-Ояр, Геннадий Леонидович]]
+#REDIRECT [[Сабанцев, Геннадий Леонидович]]
