--- a/9_вӱдшор.mw
+++ b/9_вӱдшор.mw
@@ -12,13 +12,13 @@
 
 == Кӧ шочын ==
 ''Тыгак ончо: [[:Категорий:9 Вӱдшор Кӧ шочын]]''
-* [[1867]] — [[Глезденев, Павел Петрович|Павел Петрович Глезденёв]], сылнымутчо, сотемдарче.
+* [[1867]] — [[Глезденёв, Павел Петрович|Павел Петрович Глезденёв]], сылнымутчо, сотемдарче.
 * [[1927]] — Степан Демидович Лебедев, тазалык аралтыш пашаен, Марий республикын сулло эмлызыже. [[Шернур кундем]]ыште шочын. Волжск оласе эмлымверыште хирурглан пашам ышташ тӱҥалын. 20 наре шанче пашан авторжо. Медицине шанче кандидат. 
 * [[1936]] — Евгений Иванович Коротков, Юлсер кундемыште шочын-кушшо пашазе. 1955-ше ий гыч тудо Марбумкомбинатыште пашам ышташ тӱҥалын: ончыч накатчик, а вара бригадир лийын. Тудын бригадыже Совет Ушемын ик эн сай пашаче бригадылан шотлалтын. Пашажым аклен, Евгений Ивановичым «Знак Почёта» орден дене палемденыт. 
 * [[1939]] — [[Николай Васильевич Глотов]], шанче-биолог. Йошкар-Олашке 1997-ше ийыште да [[Марий кугыжаныш университет]]ысе биологий-химий факультетын профессоржо лийын. Кушкыл-влак генетик, ботаник, экологий, биометрий сферыште специалистлан шотлалтеш. 160 наре шанче пашан авторжо. Биологий шанче доктор. 
 * [[1942]] — Леонид Никифорович Якимов, куштызо, Марий Эл Республикын калык артистше. Шкеже тудо [[У Торъял кундем]] Кожласола гыч. [[Марий Эл (ансамбль)|«Марий Эл» кугыжаныш ансамбльыште]] балет артистлан, балетмейстерын полышкалшыжлан да 7 ий вуйлатышыланат тыршен.
 * [[1956]] — Нина Ивановна Белкина, администраций пашаеҥ шочын. КПРФ партийын республикысе комитетын чолга еҥже лийын. Волжск район Карай ялысе администрацийын вуйлатышыже сомылым шуктен шоген.
-* [[????]] — Эльвира Васильевна Петрова, тӱвыра пашаеҥ да артистка. Шочынжо тудо [[Ӧрша кундем]] Мари-Ернур ялыште. 1996-шо ийыште кумдан чапланыше «Аршаш» ансамбльын вуйлатышыжлан шогалын. Кызытат тиде ансамбльым калыкыште йӧратат: а Эльвира Васильевна гармоньым шупшыл колтымыж дене кеч-кӧн чонжым савыра. 
+* [[????]] — Эльвира Васильевна Петрова, тӱвыра пашаеҥ да артистка. Шочынжо тудо [[Ӧрша кундем]] Мари-Ернур ялыште. 1996-шо ийыште кумдан чапланыше «Аршаш» ансамбльын вуйлатышыжлан шогалын. Кызытат тиде ансамбльым калыкыште йӧратат: а Эльвира Васильевна гармоньым шупшыл колтымыж дене кеч-кӧн чонжым савыра.
 
 == Кӧ колен ==
 ''Тыгак ончо: [[:Категорий:9 Вӱдшор Кӧ колен]]''
