--- a/Каҥашымаш:Глезденёв,_Павел_Петрович.mw
+++ b/Каҥашымаш:Глезденёв,_Павел_Петрович.mw
@@ -1,3 +1,8 @@
 А эту страницу предлагаю переименовать в Глезденёв, Павел Петрович. Потому что известен этот человек именно под этим именем. --[[Пайдаланыше:Санюн Вадик|Санюн Вадик]] 10:13, 19 Ага 2011 (UTC)
 :Тут я не согласен. Я думаю, надо писать по полному марийскому имени всегда когда это возможно. Думаю, надо переименовать вообще в Мендиарын Ислам-Гарей. Википедия-то марийская, и русские имена здесь можно исопльзовать только в том случае, когда нету марийского.--[[Пайдаланыше:ПешСай|ПешСай]] 11:05, 19 Ага 2011 (UTC)
 :: Так значит Ислам-Гарей - это марийское имя??? --[[Лӱмын ыштыме:Contributions/217.22.172.60|217.22.172.60]] 13:57, 19 Ага 2011 (UTC)
+
+Аргументы:
+# Человек сам поменял свое имя. Это тот случай, когда имя при рождении отличается от настоящего.
+# Известен под именем "Павел Петрович Глезденёв", "Пагул ача".
+# В литературе упоминается под именем Павел Петрович Глезденев. Рекомендую посмотреть хотя бы книгу К.Н.Санукова "Просветитель Павел Петрович Глезденев".--[[Пайдаланыше:Санюн Вадик|Санюн Вадик]] 10:08, 13 Пеледыш 2011 (UTC)
