*Empty MediaWiki Message*

--- a/Каҥашымаш:Глезденёв,_Павел_Петрович.mw
+++ b/Каҥашымаш:Глезденёв,_Павел_Петрович.mw
@@ -6,3 +6,5 @@
 # Человек сам поменял свое имя. Это тот случай, когда имя при рождении отличается от настоящего.
 # Известен под именем "Павел Петрович Глезденёв", "Пагул ача".
 # В литературе упоминается под именем Павел Петрович Глезденев. Рекомендую посмотреть хотя бы книгу К.Н.Санукова "Просветитель Павел Петрович Глезденев".--[[Пайдаланыше:Санюн Вадик|Санюн Вадик]] 10:08, 13 Пеледыш 2011 (UTC)
+
+Глезденёв, Павел Петрович--[[Пайдаланыше:Lifeway|Lifeway]] 10:18, 13 Пеледыш 2011 (UTC)
