--- a/Каҥашымаш:Глезденёв,_Павел_Петрович.mw
+++ b/Каҥашымаш:Глезденёв,_Павел_Петрович.mw
@@ -8,3 +8,5 @@
 # В литературе упоминается под именем Павел Петрович Глезденев. Рекомендую посмотреть хотя бы книгу К.Н.Санукова "Просветитель Павел Петрович Глезденев".--[[Пайдаланыше:Санюн Вадик|Санюн Вадик]] 10:08, 13 Пеледыш 2011 (UTC)
 
 Глезденёв, Павел Петрович--[[Пайдаланыше:Lifeway|Lifeway]] 10:18, 13 Пеледыш 2011 (UTC)
+
+Он известен больше как Глезденёв, Павел Петрович и его будут искать по этому имени. Если кто-то введет посик "Мендияров Ислам-Гарей", то по перенаправлению найдет точно кого надо, в самой статье можно упомянуть все его имена. [[Пайдаланыше:Vasli|Vasli]] 10:53, 13 Пеледыш 2011 (UTC)
