[[Почеламутчо]] лаштыкыш колтымаш

--- a/Поэт.mw
+++ b/Поэт.mw
@@ -1,11 +1,1 @@
-[[Файл:Sergei Chavain.jpg|200px|thumb|Сергей Чавайн. Икымше марий поэтлан шотлалтеш]]
-'''Поэ́т''' — поэзий жанрлаште возгалыше [[сылнымутчо]]. [[Почеламутчо]] ({{lang-ru|''Стихотворец''}}) поэт-влак радамыш пурен кертеш.
-
-[[Поэзий]] да [[прозо]] коклаште ойыртем уло. Поэт-влакым ойыртемалтше еҥ семын аклат, юмо тудлан кӱкшӧ мут-влакым возгалаш мастарлыкым пуен, манын ойлат.
-Тиде статуслан кӧра поэт мутым термин семын аклаш огеш лий. Тиде мут дене калык айдемын возгалыме мастарлыкшым акла: сайын огыл возгалыше айдеме нерген "поэт огыл" манын ойлат. Айдемым поэт лӱмдаш тӱҥалышт манын, южгунам ик почеламутым возаш да савыкташ огеш сите.
-Икымше марий поэт шотышто ӱчашымаш кая. Школлаште Сергей Григорьевич Чавайным икымше поэтлан шотлат. Тудын возымо "Ото" почеламутшо икымше марий почеламутлан шотлалтеш.
-Но Чавайн деч ончыч [[Павел Глезденёв]]ын "Вараксим" лӱман почеламутшым савыктеныт. В.А.Мухин тиде почеламутым "марий поэзийын шедеврже" лӱмден.
-
-== Тыгеак ончо ==
-* [[Почеламут]]
-* [[Почеламутчо]]
+#REDIRECT [[Почеламутчо]]
