/* Тӱҥ произведенийже-влак */

--- a/Сабанцев,_Геннадий_Леонидович.mw
+++ b/Сабанцев,_Геннадий_Леонидович.mw
@@ -25,9 +25,10 @@
 
 == Сылнымут паша ==
 === Тӱҥ произведенийже-влак ===
-Чытамсыр курым : почеламут-вл. [Беспокойный век : стихи]. Йошкар-Ола, 1987. 96 с.
-Нумалтыш : почеламут-вл., поэма [Ноша : стихи, поэма]. Йошкар-Ола, 1993. 160 с.
-Шӱмсавыш : почеламут-вл., статья, кусарыме почеламут ден поэме  [Отзвуки сердца : стихи, переводы, статьи]. Йошкар-Ола, 2008. 336 с.
+* Чытамсыр курым: почеламут-влак [Беспокойный век : стихи]. Йошкар-Ола, 1987. 96 с.
+* Нумалтыш: почеламут-влак, поэма [Ноша : стихи, поэма]. Йошкар-Ола, 1993. 160 с.
+* Шӱмсавыш: почеламут-влак, статья, кусарыме почеламут ден поэме  [Отзвуки сердца : стихи, переводы, статьи]. Йошкар-Ола, 2008. 336 с.
+
 === Руш йылмыш кусарымашыште ===
 Светом единым : стихи / пер. Г.Смирнова. Йошкар-Ола, 2003. 88 с.
 == Илышыж да сылнымут пашаж нереген литератур ==
