--- a/Сабанцев,_Геннадий_Леонидович.mw
+++ b/Сабанцев,_Геннадий_Леонидович.mw
@@ -29,7 +29,7 @@
 * Нумалтыш: почеламут-влак, поэма [Ноша : стихи, поэма]. Йошкар-Ола, 1993. 160 с.
 * Шӱмсавыш: почеламут-влак, статья, кусарыме почеламут ден поэме  [Отзвуки сердца : стихи, переводы, статьи]. Йошкар-Ола, 2008. 336 с.
 
-=== Руш йылмыш кусарымашыште ===
+=== Рушлаш кусарыме пого===
 Светом единым: стихи / пер. Г.Смирнова. Йошкар-Ола, 2003. 88 с.
 
 == Илышыж да сылнымут пашаж нереген литератур ==
