*Empty MediaWiki Message*

--- a/Каҥашымаш:Глезденёв,_Павел_Петрович.mw
+++ b/Каҥашымаш:Глезденёв,_Павел_Петрович.mw
@@ -10,3 +10,4 @@
 Глезденёв, Павел Петрович--[[Пайдаланыше:Lifeway|Lifeway]] 10:18, 13 Пеледыш 2011 (UTC)
 
 Он известен больше как Глезденёв, Павел Петрович и его будут искать по этому имени. Если кто-то введет посик "Мендияров Ислам-Гарей", то по перенаправлению найдет точно кого надо, в самой статье можно упомянуть все его имена. [[Пайдаланыше:Vasli|Vasli]] 10:53, 13 Пеледыш 2011 (UTC)
+:Мне, думается, что нам надо пересмотреть всю концепцию наименования статей. Откуда пошла такая традиция называть статьи про людей '''Фамилия, Имя Отчество'''? В английской википедии нет такого принципа именовать статьи про людей, [[:en:Wikipedia:Article_titles#Common_names|там используется]] самое употребимое название. Там статья про [[:en:Bill Clinton|Била Клинтона]] назвыается не <s>'''William Jefferson Clinton'''</s>, а '''Bill Clinton''' Полагаю, нам тоже следует придерживаться такой традиции и при этом приоритет отдавать марийским общепринятым именам, а потом только русским. Конечно, русское имя можно в названии статьи в скобках как-то указать, и сделать редиректы с русского на марийское употребляемое название. Мне кажется надо как-то уважать свои традиции именования людей на деле, а не только на словах.--[[Пайдаланыше:ПешСай|ПешСай]] 11:31, 13 Пеледыш 2011 (UTC)
