--- a/Каҥашымаш:Глезденёв,_Павел_Петрович.mw
+++ b/Каҥашымаш:Глезденёв,_Павел_Петрович.mw
@@ -11,3 +11,4 @@
 
 Он известен больше как Глезденёв, Павел Петрович и его будут искать по этому имени. Если кто-то введет посик "Мендияров Ислам-Гарей", то по перенаправлению найдет точно кого надо, в самой статье можно упомянуть все его имена. [[Пайдаланыше:Vasli|Vasli]] 10:53, 13 Пеледыш 2011 (UTC)
 :Мне, думается, что нам надо пересмотреть всю концепцию наименования статей. Откуда пошла такая традиция называть статьи про людей '''Фамилия, Имя Отчество'''? В английской википедии нет такого принципа именовать статьи про людей, [[:en:Wikipedia:Article_titles#Common_names|там используется]] самое употребимое название. Там статья про [[:en:Bill Clinton|Била Клинтона]] назвыается не <s>'''William Jefferson Clinton'''</s>, а '''Bill Clinton''' Полагаю, нам тоже следует придерживаться такой традиции и при этом приоритет отдавать марийским общепринятым именам, а потом только русским. Конечно, русское имя можно в названии статьи в скобках как-то указать, и сделать редиректы с русского на марийское употребляемое название. Мне кажется надо как-то уважать свои традиции именования людей на деле, а не только на словах.--[[Пайдаланыше:ПешСай|ПешСай]] 11:31, 13 Пеледыш 2011 (UTC)
+:И еще один аргумент, почему людей в Марийской Википедии надо именовать по-марийски. Это связано с особенностями индексации страниц поисковиками. Если, допустим, и в русской и в марийской википедии статья называется одинаково, например, Чавайн Сергей Григорьевич, или Глезденев Павел Петрович. Давайте, рассмотрим, что при этом произойдет, с точки зрения поисковиков. Человек вводит в поисковике "Чавайн Сергей Григорьевич". И в результатах ему покажется на первом месте статья из Русской Википедии(как более крупная, и более авторитетная по показателям индексов). Статья из Марийской, если и покажется в поисковике, то вероятнее всего где-то в середине списка или даже в конце, но не в начале, потому что в Марйиской Википедии статья написана на марийском языке и плохо коррелирует с основным количеством текстов, написанных на русском. В результате, если человек искал статью про Чавайна, то он найдет только ее на русском, на марийском не найдет. Теперь, если ставить редирект из марийского имени Чавайн Кыргори Серге на Чавайн, Сергей Григорьевич(статья так и называется в марийской википедии), то название Чавайн Кыргори Серге поисковиком все-равно не проиндексируется, потому, что это всего навсего редирект, и сама статья так не называется. Поисковик это название не проиндексирует даже при том условии, что в содержании статьи в самом начале будет написано марийское имя, а не русское. Таким образом, когда человек введет в поисковике Чавайн Кыргоре Серге, он опять таки ничего не найдет, потому что кто-то в марийской википедии придумал именовать статьи про людей по-русски. Отсюда, вывод, пользы от того, что мы будем именовать статьи в марийской википедии по-русски - никакой, на при русских запросах ни при марийских человек не сможет в поисковике найти наш материал. А если в марийской википедии, мы будем именовать статьи про людей по-марийски, тогда человек хотя бы при марийском запросе сможет найти материал. Думаю, в английской википедии не случаено статьи именуют по самому распространенному названию, пишут Bill Clinton а не William Jefferson Clinton, они преследуют именно эту цель - чтобы люди могли проще найти материал через поисковик.--[[Пайдаланыше:ПешСай|ПешСай]] 11:49, 13 Пеледыш 2011 (UTC)
