--- a/Глезденёв,_Павел_Петрович.mw
+++ b/Глезденёв,_Павел_Петрович.mw
@@ -37,3 +37,5 @@
 * {{Руш важ}} Марийская Биографическая Энциклопедия. Валерий Мочаев, Йошкар-Ола, 2007. ISBN 5-87898-357-0
 
 [[Категорий:Марий сотыеҥ]]
+
+[[ru:Глезденёв, Павел Петрович]]
