--- a/Глезденёв,_Павел_Петрович.mw
+++ b/Глезденёв,_Павел_Петрович.mw
@@ -8,7 +8,7 @@
 ==Паша==
 [[Васильев, Валериан Михайлович|Валериан Михайлович Васильев]] дене пырля "Марла календар" лан [[1907]] ийыште негызым пыштен. "Тӱҥалтыш марла кнага" да "Вес марла кнага" кнага-влакын авторжо. Шотлаш тунемме кнагам луктын.
 
-[[1907]] ий гычын [[Киров (Киров вел)|Киров]] олаште (ончыч Вятке) миссионер-священник лие. А 1918 ийыште тиде сан гыч кораҥен.
+[[1907]] ий гычын [[Киров (Киров вел)|Вятка]] олаште миссионер-священник лие. А 1918 ийыште тиде сан гыч кораҥен.
 
 [[1915]] ий гыч "[[Война увер]]" газетым савыкташ тӱҥалын. "[[Ӱжара]]" газетым савыкташлан негызым пыштен.
 
