*Empty MediaWiki Message*

--- a/Война_увер.mw
+++ b/Война_увер.mw
@@ -1,4 +1,4 @@
-'''Война увер'''<sup>1</sup> (оригинал лӱм - '''Война увэр''') — икымше [[марий йылме]] дене возымо газет. [[1915]] ийыште Пургыж тылзыште 4 кечыште Вяткыште (кызыт [[Виче]] ола) икымше номер савыкталтын. Тидлан негызым [[Павел Петрович Глезденев]] пыштен. [[Икымше Тӱнямбал Сар]] нерген уверым умылтарен. Чыным ойлаш гын, Глезденев тиде газетым кум йылме дене возен: марла "Война Увер", суасла "Сугыш хабарляре", одо йылме дене "Войнаысь ивор".
+'''Война увер'''<sup>1</sup> (оригинал лӱм - '''Война увэр''') — икымше [[марий йылме]] дене возымо газет. [[1915]] ийыште Пургыж тылзыште 4 кечыште Вяткыште (кызыт [[Киров (Киров вел)|Киров]] ола) икымше номер савыкталтын. Тидлан негызым [[Павел Петрович Глезденев]] пыштен. [[Икымше Тӱнямбал Сар]] нерген уверым умылтарен. Чыным ойлаш гын, Глезденев тиде газетым кум йылме дене возен: марла "Война Увер", суасла "Сугыш хабарляре", одо йылме дене "Войнаысь ивор".
 
 Тылзыште кок гана савыкталтын, ик номерлан возалтмаш ак 1 теҥгеат 20 ыр палемдалтын. Тӱжвач ончымаште тунемшын тетрадьшыла койын. Материал-влак кандаш страницеш кок радам (колонко) дене вераҥдалтыныт. Газетын икымше кок номерже аралалт кодын огыл, 30 номерже мемнан жап марте шуын.
 
