--- a/Каҥашымаш:Глезденёв,_Павел_Петрович.mw
+++ b/Каҥашымаш:Глезденёв,_Павел_Петрович.mw
@@ -14,3 +14,5 @@
 :И еще один аргумент, почему людей в Марийской Википедии надо именовать по-марийски. Это связано с особенностями индексации страниц поисковиками. Если, допустим, и в русской и в марийской википедии статья называется одинаково, например, Чавайн Сергей Григорьевич, или Глезденев Павел Петрович. Давайте, рассмотрим, что при этом произойдет, с точки зрения поисковиков. Человек вводит в поисковике "Чавайн Сергей Григорьевич". И в результатах ему покажется на первом месте статья из Русской Википедии(как более крупная, и более авторитетная по показателям индексов). Статья из Марийской, если и покажется в поисковике, то вероятнее всего где-то в середине списка или даже в конце, но не в начале, потому что в Марйиской Википедии статья написана на марийском языке и плохо коррелирует с основным количеством текстов, написанных на русском. В результате, если человек искал статью про Чавайна, то он найдет только ее на русском, на марийском не найдет. Теперь, если ставить редирект из марийского имени Чавайн Кыргори Серге на Чавайн, Сергей Григорьевич(статья так и называется в марийской википедии), то название Чавайн Кыргори Серге поисковиком все-равно не проиндексируется, потому, что это всего навсего редирект, и сама статья так не называется. Поисковик это название не проиндексирует даже при том условии, что в содержании статьи в самом начале будет написано марийское имя, а не русское. Таким образом, когда человек введет в поисковике Чавайн Кыргоре Серге, он опять таки ничего не найдет, потому что кто-то в марийской википедии придумал именовать статьи про людей по-русски. Отсюда, вывод, пользы от того, что мы будем именовать статьи в марийской википедии по-русски - никакой, на при русских запросах ни при марийских человек не сможет в поисковике найти наш материал. А если в марийской википедии, мы будем именовать статьи про людей по-марийски, тогда человек хотя бы при марийском запросе сможет найти материал. Думаю, в английской википедии не случаено статьи именуют по самому распространенному названию, пишут Bill Clinton а не William Jefferson Clinton, они преследуют именно эту цель - чтобы люди могли проще найти материал через поисковик.--[[Пайдаланыше:ПешСай|ПешСай]] 11:49, 13 Пеледыш 2011 (UTC)
 * Я поддерживаю «Глезденёв, Павел Петрович», т.к. так написано в современной «Энциклопедии Марий Эл» (2009) (стр. 306). Марийские формы христианских имён для использования в персоналиях я вообще не поддерживаю, т.к. законодательно они не кодифицированы: если в русском к примеру полное имя однозначно Анна, то в марийском это и Ана, и Анук, и Ануш, Степан - Стапан, Сепан и т.д. Во избежание путаницы единственный выход использовать заимствованные из русского формы, которые понятны всем. Ну а смысла переставлять «Клинтон, Билл» в «Билл Клинтон», учитывая выше сказанное, нет, т.к. в и РуВики, и в МариВики должна быть форма «Билл Клинтон» с редиректом. [[Пайдаланыше:Yufereff|Yufereff]] 13:39, 13 Пеледыш 2011 (UTC)
 * Действительно, нет единых правил как писать на марийский манер имена. Тот же Чавайн, по-марийски писался по-разному: Сэргэ Чавайн, Серге Чавайн, Сергей Чавайн. Вачи - у нас значит Вячеслав, где-то Василий. Потом не все марийцы согласны, чтобы их называли на марийский манер. [[Пайдаланыше:Vasli|Vasli]] 14:15, 13 Пеледыш 2011 (UTC)
+** Так, никто и не говорит, что всех поголовно писать по-марийски. Там где это возможно, там разумнее по-марийски писать. Если есть несколько вариантов, например, Вачи и Васли, то нужно выбрать тот, как сам человек себя называет. Если брать конкретно Чавайна, то вполне очевидно, что Сэргэ - это устаревший вариант написания через э, а Сергей - это просто русский вариант, отсюда остается Серге Чавайн. А если еще точнее то Чавайн Кыргори Серге. --[[Пайдаланыше:ПешСай|ПешСай]] 15:17, 13 Пеледыш 2011 (UTC)
+** И по поводу участия в обсуждении участника Yufereff. На мой взгляд, решать подобного рода вопросы должны только сами марийцы. Думаю, все согласятся, что представителям других народов не должно оказывать влияние на такие обсуждения.--[[Пайдаланыше:ПешСай|ПешСай]] 15:17, 13 Пеледыш 2011 (UTC)
