*Empty MediaWiki Message*

--- a/Каҥашымаш:Глезденёв,_Павел_Петрович.mw
+++ b/Каҥашымаш:Глезденёв,_Павел_Петрович.mw
@@ -16,3 +16,4 @@
 * Действительно, нет единых правил как писать на марийский манер имена. Тот же Чавайн, по-марийски писался по-разному: Сэргэ Чавайн, Серге Чавайн, Сергей Чавайн. Вачи - у нас значит Вячеслав, где-то Василий. Потом не все марийцы согласны, чтобы их называли на марийский манер. [[Пайдаланыше:Vasli|Vasli]] 14:15, 13 Пеледыш 2011 (UTC)
 ** Так, никто и не говорит, что всех поголовно писать по-марийски. Там где это возможно, там разумнее по-марийски писать. Если есть несколько вариантов, например, Вачи и Васли, то нужно выбрать тот, как сам человек себя называет. Если брать конкретно Чавайна, то вполне очевидно, что Сэргэ - это устаревший вариант написания через э, а Сергей - это просто русский вариант, отсюда остается Серге Чавайн. А если еще точнее то Чавайн Кыргори Серге. --[[Пайдаланыше:ПешСай|ПешСай]] 15:17, 13 Пеледыш 2011 (UTC)
 ** И по поводу участия в обсуждении участника Yufereff. На мой взгляд, решать подобного рода вопросы должны только сами марийцы. Думаю, все согласятся, что представителям других народов не должно оказывать влияние на такие обсуждения.--[[Пайдаланыше:ПешСай|ПешСай]] 15:17, 13 Пеледыш 2011 (UTC)
+** И такой вопрос еще, Энциклопедия Марий Эл на каком языке написана? На русском? Если, да, тогда какое отношение она имеет к марийской википедии, где все пишется по-марийски?--[[Пайдаланыше:ПешСай|ПешСай]] 15:20, 13 Пеледыш 2011 (UTC)
