--- a/Ваштар.mw
+++ b/Ваштар.mw
@@ -1,6 +1,21 @@
-[[Файл: Vaahtera_syysasussa.jpg|thumb|right|250px|Ваштар шыжым]]
-[[Файл: Illustration_Acer_platanoides0_clean.jpg|thumb|right|250px|Ваштар пеледыш да нӧшмӧ]]
-[[Файл:Acer-saccharinum-leaves.JPG|thumb|300px|Ваштар лышташ-влак]]
+{{Таксаҥа
+| лӱм = Ош ваштар
+| сӱрет =  Maple leaves.jpg
+| сӱрет_вуймут =  
+| кугыжаныш = [[Кушкыл]]
+| пӧлка = [[Шылтымнӧшман кушкыл|Шылтымнӧшман]] (Magnoliophyta) 
+| класс = Magnoliopsida 
+| тӱча = [[Sapindales]]
+| йамагат = [[Sapindaceae]]
+| ӱлылйамагат = Hippocastanoideae
+| урлык = '''Acer'''
+| subdivision_ranks = Тӱрлык-влак
+| subdivision = 129 наре тӱрлык-влак.
+}}
+
+[[Файл: Vaahtera_syysasussa.jpg|thumb|right|230px|Ваштар шыжым]]
+[[Файл: Illustration_Acer_platanoides0_clean.jpg|thumb|right|230px|Ваштар пеледыш да нӧшмӧ]]
+[[Файл:Acer-saccharinum-leaves.JPG|thumb|230px|Ваштар лышташ-влак]]
 
 '''Ваштар''' ({{lang-la| Acer}}) шовын кичкан кушкыл-влак {{comment|[[тӱча]]шке|тӱча (ямагат) - семейство}} (Sapindaceae) пура. Ваштар [[пушеҥге]] да [[Тыгыдер|тӱшка]] лийын кертеш. Ваштар-влакым чӱчкыдын парк-влакыште вашлияш лиеш. Европышто 3 еш ваштар кушкеш: [[тыглай ваштар]] (''Acer platanoides''), [[нур ваштар]] (''Acer campestre'' ) да [[ош ваштар]] (''Acer pseudoplatanus'') .
 
