*Empty MediaWiki Message*

--- a/Ваштар.mw
+++ b/Ваштар.mw
@@ -1,7 +1,7 @@
 {{Таксаҥа
 | лӱм = Ош ваштар
-| сӱрет =  Maple leaves.jpg
-| сӱрет_вуймут =  
+| сӱрет =  Illustration_Acer_platanoides0_clean.jpg
+| сӱрет_вуймут =  Ваштар (''A. platanoides'') пеледыш да нӧшмӧ
 | кугыжаныш = [[Кушкыл]]
 | пӧлка = [[Шылтымнӧшман кушкыл|Шылтымнӧшман]] (Magnoliophyta) 
 | класс = Magnoliopsida 
@@ -13,8 +13,7 @@
 | subdivision = 129 наре тӱрлык-влак.
 }}
 
-[[Файл: Vaahtera_syysasussa.jpg|thumb|right|230px|Ваштар шыжым]]
-[[Файл: Illustration_Acer_platanoides0_clean.jpg|thumb|right|230px|Ваштар пеледыш да нӧшмӧ]]
+[[Файл: Vaahtera_syysasussa.jpg|thumb|right|230px|Ваштар шыжым]] 
 [[Файл:Acer-saccharinum-leaves.JPG|thumb|230px|Ваштар лышташ-влак]]
 
 '''Ваштар''' ({{lang-la| Acer}}) шовын кичкан кушкыл-влак {{comment|[[тӱча]]шке|тӱча (ямагат) - семейство}} (Sapindaceae) пура. Ваштар [[пушеҥге]] да [[Тыгыдер|тӱшка]] лийын кертеш. Ваштар-влакым чӱчкыдын парк-влакыште вашлияш лиеш. Европышто 3 еш ваштар кушкеш: [[тыглай ваштар]] (''Acer platanoides''), [[нур ваштар]] (''Acer campestre'' ) да [[ош ваштар]] (''Acer pseudoplatanus'') .
