*Empty MediaWiki Message*

--- a/Ваштар.mw
+++ b/Ваштар.mw
@@ -18,6 +18,9 @@
 
 '''Ваштар''' ({{lang-la| Acer}}) шовын кичкан кушкыл-влак {{comment|[[тӱча]]шке|тӱча (ямагат) - семейство}} (Sapindaceae) пура. Ваштар [[пушеҥге]] да [[Тыгыдер|тӱшка]] лийын кертеш. Ваштар-влакым чӱчкыдын парк-влакыште вашлияш лиеш. Европышто 3 еш ваштар кушкеш: [[тыглай ваштар]] (''Acer platanoides''), [[нур ваштар]] (''Acer campestre'' ) да [[ош ваштар]] (''Acer pseudoplatanus'') .
 
+== Тӱрлык-влак == 
+*[[Ваштар тӱрлык-влак]]
+
 [[Категорий:Пушеҥге|Ваштар]]
 
 [[an:Acer]]
