*Empty MediaWiki Message*

--- a/Ош_ваштар.mw
+++ b/Ош_ваштар.mw
@@ -11,7 +11,7 @@
 | урлык = [[Acer]]
 | тӱрлык = '''Acer pseudoplatanus'''
 }}
-'''Ош ваштар''' ({{lang-la|Acer pseudoplatanus}} ) –  [[Sapindaceae]] кушкыл-влакын [[ваштар]] урлыкын тукымыш пура, [[Евразий]] шуко верлаште кушшо [[пушеҥге]]. 
+'''Ош ваштар''' ({{lang-la|Acer pseudoplatanus}} ) –  [[Sapindaceae]] кушкыл-влакын [[ваштар]] урлыкын тукымыш пура, [[Евразий]]ын шуко верлаште кушшо [[пушеҥге]]. 
 
 [[Категорий:Пушеҥге]]
 {{stub}}
