--- a/Каҥашымаш:Глезденёв,_Павел_Петрович.mw
+++ b/Каҥашымаш:Глезденёв,_Павел_Петрович.mw
@@ -17,3 +17,4 @@
 ** Так, никто и не говорит, что всех поголовно писать по-марийски. Там где это возможно, там разумнее по-марийски писать. Если есть несколько вариантов, например, Вачи и Васли, то нужно выбрать тот, как сам человек себя называет. Если брать конкретно Чавайна, то вполне очевидно, что Сэргэ - это устаревший вариант написания через э, а Сергей - это просто русский вариант, отсюда остается Серге Чавайн. А если еще точнее то Чавайн Кыргори Серге. --[[Пайдаланыше:ПешСай|ПешСай]] 15:17, 13 Пеледыш 2011 (UTC)
 ** И по поводу участия в обсуждении участника Yufereff. На мой взгляд, решать подобного рода вопросы должны только сами марийцы. Думаю, все согласятся, что представителям других народов не должно оказывать влияние на такие обсуждения.--[[Пайдаланыше:ПешСай|ПешСай]] 15:17, 13 Пеледыш 2011 (UTC)
 ** И такой вопрос еще, Энциклопедия Марий Эл на каком языке написана? На русском? Если, да, тогда какое отношение она имеет к марийской википедии, где все пишется по-марийски?--[[Пайдаланыше:ПешСай|ПешСай]] 15:20, 13 Пеледыш 2011 (UTC)
+Безусловно, в русскоязычных источниках '''Пагул ача''' более известен под именем '''Глезденёв Павел Петрович''', марийскоязычных просто нет. Да, он поменял имя, но был ли у него выбор в тот момент? Я не против, чтоб назвать статью "Глезденёв Павел Петрович", марийское имя можно указать в статье, но вопрос всё равно спорный. Во-первых, это чуждая традиция, во-вторых, как говорит ПешСай, в поисковике марийский вариант при таком условии не найдётся. Мне ещё непонятна запятая после фамилии, заимствованная из русскоязычной википедии. Я думаю, она нам не нужна. [[Пайдаланыше:Azimbaj|Azimbaj]] 20:50, 13 Пеледыш 2011 (UTC)
