*Empty MediaWiki Message*

--- a/Кандывуй.mw
+++ b/Кандывуй.mw
@@ -15,7 +15,7 @@
 | subdivision_ranks = Тӱрлык-влак
 | subdivision = 350-600 наре тӱрлык-влак.
 }}
-'''Кандывуй''' ({{lang-la|Centaurea}} < {{lang-la2|centaureus }} «кентавр») –  [[Asteraceae]] кушкыл-влакын тукымыш пура, [[Eastern Hemisphere]]-ын шуко верлаште кушшо [[пеледыш (кушкыл)|пеледыш]]. 
+'''Кандывуй''' ({{lang-la|Centaurea}} < {{lang-la|centaureus }} «кентавр») –  [[Asteraceae]] кушкыл-влакын тукымыш пура, [[Eastern Hemisphere]]-ын шуко верлаште кушшо [[пеледыш (кушкыл)|пеледыш]]. 
 
 == Тӱрлык-влак == 
 {| class="wikitable"
