*Empty MediaWiki Message*

--- a/Каҥашымаш:Сымыктыш.mw
+++ b/Каҥашымаш:Сымыктыш.mw
@@ -1,3 +1,5 @@
 Azimbaj, а могай йоҥылыш-влак? Йада, тӧрлатена. Сымыктыш - тиде эн кӱлешан статьяже. --ПешСай 09:50, 22 Пургыж 2010 (UTC)
 
 Йоҥлыш тынар, что страм)) --[[Пайдаланыше:Санюн Вадик|Санюн Вадик]] 14:09, 25 Кылме 2010 (UTC)
+
+ПешСай, тый иктаж-мом "марла" возымет годым "Каҥашымашыш" мом каласаш шоныметым рушлат возо... Уке гын тыйын "марий йылметым" умылаш пеш неле... [[Пайдаланыше:Vasli|Vasli]] 21:26, 13 Пеледыш 2011 (UTC)
