*Empty MediaWiki Message*

--- a/Блю,_Корбин.mw
+++ b/Блю,_Корбин.mw
@@ -9,7 +9,7 @@
 <gallery>
 Файл:CorbinBleuDec06.jpg
 Файл:Corbin Bleu.jpg
-Файл:CorbinBleuDec10 2.jpg
+Файл:CorbinBleuDec10.jpg
 </gallery>
 
 [[Категорий:Рок-тӱшка]]
