*Empty MediaWiki Message*

--- a/Глезденёв,_Павел_Петрович.mw
+++ b/Глезденёв,_Павел_Петрович.mw
@@ -1,4 +1,4 @@
-'''Мендиарын (Мендияров) Ислам-Гарей'''<ref>[http://lumvlak.marlamuter.org/ «Марий лӱмвлак: ойкаҥаш полшык» Крыммарий Азим, 2008г.]</ref> ('''Павел Петрович Глезденев''' - чоклымаш деч вара лӱм [[21 Вӱдшор]] [[1867]] — [[28 Ага]] [[1923]]) — [[марий]] {{comment|сотыеҥ|просветитель}}, этнограф. Кресаньык ешыште, [[Тумбагуш]] ялыште, [[Шаранский кундем]]ыште, [[Пошкырт Эл]]ыште шочын. [[1892]] ийыште [[танле тын]]ыш пурен.
+'''Глезденёв Павел Петрович''' (чоклымаш деч ончыч '''Мендиарын (Мендияров) Ислам-Гарей'''<ref>[http://lumvlak.marlamuter.org/ «Марий лӱмвлак: ойкаҥаш полшык» Крыммарий Азим, 2008г.]</ref> [[21 Вӱдшор]] [[1867]] — [[28 Ага]] [[1923]]) — [[марий]] {{comment|сотыеҥ|просветитель}}, этнограф. Кресаньык ешыште, [[Тумбагуш]] ялыште, [[Шаранский кундем]]ыште, [[Пошкырт Эл]]ыште шочын. [[1892]] ийыште [[танле тын]]ыш пурен.
 
 ==Туныктыш==
 * [[1887]] - [[Пӱрӧ (ола)|Пӱрӧсӧ]] туныктышо семинарий,
@@ -6,9 +6,9 @@
 * [[1906]] - [[Озаҥ]]ысе духовный академий.
 
 ==Паша==
-[[Васильев, Валериан Михайлович|Валериан Михайлович Васильев]] дене пырля "Марла календар" лан [[1907]] ийыште негызым пыштен. "Тӱҥалтыш марла кнага" да "Вес марла кнага" кнага-влакын авторжо. Шотлаш тунемме кнагам луктын.
+[[Васильев, Валериан Михайлович|Валериан Михайлович Васильев]] дене пырля "Марла календарлан" [[1907]] ийыште негызым пыштен. "Тӱҥалтыш марла кнага" да "Вес марла кнага" кнага-влакын авторжо. Шотлаш тунемме кнагам луктын.
 
-[[1907]] ий гычын [[Виче]] олаште миссионер-священник лие. А 1918 ийыште тиде сан гыч кораҥен.
+[[1907]] ий гычын [[Виче]] олаште [[Христианлык|христиан]] миссионер-онаеҥ лийын. А 1918 ийыште тиде сан гыч кораҥен.
 
 [[1915]] ий гыч "[[Война увер]]" газетым савыкташ тӱҥалын. "[[Ӱжара]]" газетым савыкташлан негызым пыштен.
 
@@ -16,7 +16,7 @@
 
 Вятский губернийыште "Марий Ушем" мер организацийын вуйлатыше.
 
-Марий йылме дене политический брошере-влакым возен: "Партия-шамыч", "Кугыжаныш пашам ончымаш".
+Марий йылме дене политический брошюре-влакым возен: "Партия-шамыч", "Кугыжаныш пашам ончымаш".
 
 [[1917]] - [[1918]] ийлаште {{comment|Виче губернийын земстваште инородческий туныктышык пӧлка вуйлатыше|зав. отделом инородческого образования Вятского губ. земства}}. Финно-угор калыкын илышыжым шымлен.
 
