--- a/Глезденёв,_Павел_Петрович.mw
+++ b/Глезденёв,_Павел_Петрович.mw
@@ -1,4 +1,4 @@
-'''Глезденёв Павел Петрович''' (чоклымаш деч ончыч '''Мендиарын (Мендияров) Ислам-Гарей'''<ref>[http://lumvlak.marlamuter.org/ «Марий лӱмвлак: ойкаҥаш полшык» Крыммарий Азим, 2008г.]</ref> [[21 Вӱдшор]] [[1867]] — [[28 Ага]] [[1923]]) — [[марий]] {{comment|сотыеҥ|просветитель}}, этнограф. Кресаньык ешыште, [[Тумбагуш]] ялыште, [[Шаранский кундем]]ыште, [[Пошкырт Эл]]ыште шочын. [[1892]] ийыште [[танле тын]]ыш пурен.
+'''Глезденёв Павел Петрович''' (чоклымаш деч ончыч '''Мендиарын (Мендияров) Ислам-Гарей'''<ref>[http://lumvlak.marlamuter.org/ «Марий лӱмвлак: ойкаҥаш полшык» Крыммарий Азим, 2008г.]</ref>, [[21 Вӱдшор]] [[1867]] — [[28 Ага]] [[1923]]) — [[марий]] {{comment|сотыеҥ|просветитель}}, этнограф. Кресаньык ешыште, [[Тумбагуш]] ялыште, [[Шаранский кундем]]ыште, [[Пошкырт Эл]]ыште шочын. [[1892]] ийыште [[танле тын]]ыш пурен.
 
 ==Туныктыш==
 * [[1887]] - [[Пӱрӧ (ола)|Пӱрӧсӧ]] туныктышо семинарий,
@@ -8,7 +8,7 @@
 ==Паша==
 [[Васильев, Валериан Михайлович|Валериан Михайлович Васильев]] дене пырля "Марла календарлан" [[1907]] ийыште негызым пыштен. "Тӱҥалтыш марла кнага" да "Вес марла кнага" кнага-влакын авторжо. Шотлаш тунемме кнагам луктын.
 
-[[1907]] ий гычын [[Виче]] олаште [[Христианлык|христиан]] миссионер-онаеҥ лийын. А 1918 ийыште тиде сан гыч кораҥен.
+[[1907]] ий гычын [[Киров (Киров вел)|Виче]] олаште [[Христианлык|христиан]] миссионер-онаеҥ лийын. А 1918 ийыште тиде сан гыч кораҥен.
 
 [[1915]] ий гыч "[[Война увер]]" газетым савыкташ тӱҥалын. "[[Ӱжара]]" газетым савыкташлан негызым пыштен.
 
