*Empty MediaWiki Message*

--- a/Мӱкш.mw
+++ b/Мӱкш.mw
@@ -3,10 +3,10 @@
  | сӱрет   = Bees Collecting Pollen 2004-08-14.jpg
  | сӱрет_нерген  = Мӱй мӱкш
  | кугыжаныш       = [[Янлык]]
- | пӧлка      = [[Членистоногие]]
+ | пӧлка      = {{comment|[[Йыжыҥйолан]]|Членистоногие}}
  | класс      = [[Шыҥа-Копшаҥге]]
- | тӱча         = [[Перепончатокрылые]]
- | ӱлылтӱча   = [[Стебельчатобрюхие]]
+ | тӱча         = {{comment|[[Чорашулдыран]]|Перепончатокрылые}}
+ | ӱлылтӱча   = {{comment|[[Вургомӱшкыран]]|Стебельчатобрюхие}}
  | кӱшылйамагат    = [[Мӱкш-влак]] (Apoidea)
  | рангдыме_урлык = '''Мӱкш''' (Apiformes)
  | latin = {{btname|Apoidea|Latreille, 1802}}
@@ -27,14 +27,14 @@
 }}
 
 '''Мӱкш''' ({{lang-la|Anthophila}}. Мӱкш-влак кӱшылйамагатыш пура, {{lang-la|Apoidea}}) — {{comment|шыҥа-копшаҥге|насекомое}}.
-Тӱняште 20 тӱжем наре мӱкш тӱрлык уло. Антарктидым шотыш налде, мӱкша-влакым Мландын кеч могай лукыштыжо муаш лиеш. Нектарым да {{comment|пеледыш пуракым|пыльца}} кочкыт, нектар - вийым, пеледыш пурак - белокым да моло кӱлеш веществам пуа. Нектарым погашлан мӱкш кужу нер денже пайдалана. Кажне мӱкшын кок мужыр шулдыржо уло. Шеҥгел шулдыр мужыржо изирак.
+Тӱняште 20 тӱжем наре мӱкш тӱрлык уло. Антарктидым шотыш налде, мӱкш-влакым Мландын кеч могай лукыштыжо муаш лиеш. Нектарым да {{comment|пеледыш пуракым|пыльца}} кочкыт, нектар - вийым, пеледыш пурак - {{comment|ошыкым|белокым}} да моло кӱлешан {{comment|эменым|веществам}} пуа. Нектарым погаш мӱкш кужу нержым пайдалана. Кажне мӱкшын кок мужыр шулдыржо уло. Шеҥгел шулдыр мужыржо изирак.
 
 == Шыркаҥдымаш ==
 Мӱкш {{comment|шыркаҥдымаш|опыление}} паша денже пеледше кушкыл-влаклан шукемаш полша. Нектар да пеледыш пуракым погымо годым ик пеледыш гыч весыш чоҥештылеш, капштыже кушшо ӱп дене пеледыш пуракым пога. Ӱп коклашке пеледыш пурак пижеш. Мӱкш шке мӱшкыржым йол денже эрыкта да пеледыш пуракым шеҥгел йол коклаште верланыше калташке пога.
 
-Пелдыш пурак ден нектар иктеш варалтыт, тиде нугыдым [[караш|{{comment|карашыш|соты}}]] оптат, ӱмбакыже мӱкш муным пыштат, вара караш петыратлтеш. Ялозанлыклан мӱкш-влак кугу пайдам кондат. Мӱйым ыштыме дене гына огыл, пеледышым шыркаҥдымаш - моткоч кугу пайда. {{comment|Мӱкшава|матка}} шыжым ик кечыште 2000 муыным пышта, мӱй погымо жапыште 1000 гыч 1500 муно марте.
+Пелдыш пурак ден нектар иктеш варалтыт, тиде нугыдым [[караш|{{comment|карашыш|соты}}]] оптат, ӱмбакыже мӱкш муным пыштат, вара караш петыратлтеш. Ялозанлыклан мӱкш-влак кугу пайдам кондат. Мӱйым ыштыме дене гына огыл, пеледышым шыркаҥдымаш - моткоч кугу пайда. {{comment|Мӱкшава|матка}} шыжым ик кечыште 2000 муным пышта, мӱй погымо жапыште 1000 гыч 1500 муно марте.
 
-Южо мӱкш тӱрлык-влак пеледыш пурак олмеш пеледыш ӱйым гына погат. А Meliponini лӱман мӱкш тӱшка колышо шыҥа-копшаҥгым кочкын - пледыш пуракым огыт пого. Нунын {{comment|умдышт|жало}} уке.
+Южо мӱкш тӱрлык-влак пеледыш пурак олмеш пеледыш ӱйым гына погат. А Meliponini лӱман мӱкш тӱшка колышо шыҥа-копшаҥгым кочкыт - пеледыш пуракым огыт пого. Нунын {{comment|умдышт|жало}} уке.
 
 == Тыгеак ончо ==
 * [[Мӱй]]
