--- a/Теле_йӱштылмаш.mw
+++ b/Теле_йӱштылмаш.mw
@@ -20,7 +20,7 @@
 
 == Шарлымаш ==
 Теле йӱштылмашым эн чот [[Финляндий]]ыште йӧратат. Финн культуро да сауныш пурымо йӱла дене кылдалтын. Шокш мончашке пурымо годым жапын-жапын мончазе-влак йӱштӧ вӱдан бассейныш але вӱд вакышке тӧрштат. Финляндийыште ик арняште 1-2 гана йӱштылалтше-влакын чотышт - 120 000. Финляндийыште [[1989]] ий гыч теле йӱштылмаш дене чемпионат эрта. Икымше гана 110 еҥ таҥасаш толын, 2000-ше ийыште - 1250. Икымше тӱнямбал чемпионат Хельсинки олаште [[2000]]-ше ийыштак эртен. [[2008]] ийыште теле йӱштылмаш чемпионат икымше гана Финляндийыште огыл эртен - [[Лондон]]ышто. 
-Йӱдвел Америкыште '''морж'''-влакым '''ош маска''' лӱмдат. Эн тошто [[:en:Coney Island Polar Bear Club|''"Ош маска клуб"'']] Нью-Йорк олаште верланен. Нуно [[Атлантик теҥыз]]ыште [[Шыжа]] тылзе гыч [[Вӱдшор]] тылзе марте кажне рушарнян йӱштылыт.
+Йӱдвел Америкыште '''морж'''-влакым '''ош маска''' лӱмдат. Эн тошто [[:en:Coney Island Polar Bear Club|''"Ош маска клуб"'']] Нью-Йорк олаште верланен. Нуно [[Атлантик тептеҥыз]]ыште [[Шыжа]] тылзе гыч [[Вӱдшор]] тылзе марте кажне рушарнян йӱштылыт.
 
 [[Китай]]ыштат теле йӱштылмаш шарлен. [[1940]]-ше ийлаште туҥалыныт, а [[2006]] ийыште йӱштылшо-влакын чотышт 200 000 еҥ наре ыле.
 
