*Empty MediaWiki Message*

--- a/Саву_теҥыз.mw
+++ b/Саву_теҥыз.mw
@@ -29,3 +29,36 @@
 
 
 {{Тыныс тептеҥызын теҥыз-влакше}}
+[[be:Мора Саву]]
+[[bg:Море Саву]]
+[[ca:Mar de Savu]]
+[[da:Savuhavet]]
+[[de:Sawusee]]
+[[el:Θάλασσα Σάβου]]
+[[en:Savu Sea]]
+[[es:Mar de Savu]]
+[[et:Sawu meri]]
+[[eu:Savuko itsasoa]]
+[[fa:دریای ساوو]]
+[[fi:Savunmeri]]
+[[fr:Mer de Savu]]
+[[fy:Savûsee]]
+[[id:Laut Sawu]]
+[[it:Mare di Savu]]
+[[ja:サヴ海]]
+[[jv:Segara Sawu]]
+[[ka:სავუს ზღვა]]
+[[ko:사우 해]]
+[[lt:Savu jūra]]
+[[lv:Savu jūra]]
+[[ms:Laut Savu]]
+[[nl:Savoezee]]
+[[nn:Savuhavet]]
+[[no:Savusjøen]]
+[[pl:Morze Sawu]]
+[[ru:Море Саву]]
+[[pt:Mar de Savu]]
+[[uk:Саву]]
+[[vi:Biển Savu]]
+[[war:Dagat Savu]]
+[[zh:萨武海]]
