--- a/Теле_йӱштылмаш.mw
+++ b/Теле_йӱштылмаш.mw
@@ -1,15 +1,15 @@
 [[File:Jak sie kapac.JPG|thumb|260px|Вӱд вакыште "морж"-влак йӱштылыт. [[Польшо]].]]
-'''Теле йӱштылмаш''', '''моржланымаш''' (руш. ''Зимнее плавание'', ''моржевание'') --- почмо вӱдыштӧ телымсе йӱштылмаш. Ий леведын огыл гын, вӱдын температурыжо "[[йӱштӧ]]" (+15 гыч +4 °C марте) категорийыш пура. Иыште вакым руеныт гын, вӱд ияҥше (ледяная) ( +4 градуса гыч -2 марте) категорийыш пура. Тӱрлӧ эллаште телым йӱштылшӧ-влакым тӱрлын лӱмдат. [[Россий]]ыште морж дене таҥастарат гын, [[Финляндий]]ыште - {{comment|[[кома]]|выдра}}, нерпа, тюлень дене, [[Йӱдвел Америке|Йӱдвел Америкыште]] - [[ош маска]] дене таҥастарат.
+'''Теле йӱштылмаш''', '''моржланымаш''' (руш. ''Зимнее плавание'', ''моржевание'') --- почмо вӱдыштӧ телымсе йӱштылмаш. Ий леведын огыл гын, вӱдын температурыжо "[[йӱштӧ]]" (+15 гыч +4 °C марте) категорийыш пура. Ийыште вакым руеныт гын, вӱд ияҥше (ледяная) ( +4 градус гыч -2 марте) категорийыш пура. Тӱрлӧ эллаште телым йӱштылшӧ-влакым тӱрлын лӱмдат. [[Россий]]ыште морж дене таҥастарат гын, [[Финляндий]]ыште - {{comment|[[кома]]|выдра}}, нерпа, тюлень дене, [[Йӱдвел Америке|Йӱдвел Америкыште]] - [[ош маска]] дене таҥастарат.
 
 == Йӱштылмаш нерген ==
-Вакыште вӱд тарванылеш гын - кылмен ок керт. Эн чӱчкыдын тиде тарванылмашым вӱдйымалсе насос але пропеллер дене ыштат. Вӱдыш пурашлан южо вере олалаште шокшо кӱварым пыштат. А тыге вакыште вӱдыш волашлан оҥа гыч тошкалтышым ыштат. Пураш-лекташ куштылгырак. Тыгеак йӱштылмо вер воктене вургемым кудашаш-чияш, солык дене ӱштылалташлан верым чоҥыман. 
+Вакыште вӱд тарванылеш гын - кылмен ок керт. Эн чӱчкыдын тиде тарванылмашым вӱдйымалсе {{comment|туле|насос}} але пропеллер дене ыштат. Вӱдыш пурашлан южо вере олалаште шокшо кӱварым пыштат. А тыге вакыште вӱдыш волашлан оҥа гыч тошкалтышым ыштат. Пураш-лекташ куштылгырак. Тыгеак йӱштылмӧ вер воктене вургемым кудашаш-чияш, солык дене ӱштылалташлан верым чоҥыман. 
 
 == Ойкаҥаш ==
-[[Файл:Icehole.jpg|thumb|left|250px|Вӱд йымалсе насос вӱдлан кылмаш ок пу.]]
+[[Файл:Icehole.jpg|thumb|left|250px|Вӱд йымалсе туле вӱдлан кылмаш ок пу.]]
 
 Йӱштылаш тӱҥалнеда гын, шот дене ыштыман. Теве <ref>http://www.turunavantouimarit.fi/yleista.htm Турку оласе Теле йӱштылмаш клубын </ref> ойкаҥашыже:
 
-# Вургем ден йолчием проста лийшаш, йӱштылалтме деч вара чытырыше кид дене полдыш дене але кӱртньӧ молний дене пӧрдаш йӧсӧ. Эн сай вургем – спорт йолаш, капюшонан балахон да вуй гоч чийме свитр. Меж калпак, шнурокдымо йолчием, мутлан портышкем. Тыгеак теле йӱштылмашышке солыкым налман.  Да матерчатый тапычкым. Резине сланце-влак ийыш кылмен шинчыт. 
+# Вургем ден йолчием тыглай лийшаш, йӱштылалтме деч вара чытырыше кид дене полдыш дене але кӱртньӧ молний дене пӧрдаш йӧсӧ. Эн сай вургем – спорт йолаш, капюшонан балахон да вуй гоч чийме свитр. Меж калпак, шнурокдымо йолчием, мутлан портышкем. Тыгеак теле йӱштылмашышке солыкым налман.  Да матерчатый тапычкым. Резине сланце-влак ийыш кылмен шинчыт. 
 # Икымше медицин полышым ыштен моштышо йолташым пырля налман. Южгунам таза еҥ-влак вӱд гыч лекмеке уш йомдарен, мӧҥгеш вӱдыш камвозыныт.
 # Йӱштылалтме деч ончыч арака дене лӱддымылыкым погаш ок кӱл. Шӱмлан тудо нелылыкым пуа, да тыгеак [[Йӱштӧ|йӱштым]] айдеме сайын ок шиж. Тыге, йӱышӧ шуко жап йӱштыштӧ чытен кертеш, но нормо деч 5-10 минутлан шукырак  йӱштӧ вӱдыштӧ лийымаш – удан мучашлалт кертеш.
 # Эн сай, кунам уремыште иктаж 6 градус йӱштӧ наре. А тиддеч йӱштырак гын, вӱд воктене ала могай шокшо вер лийышаш – [[монча]], пӧрт але машина. Йӱштылмаш деч вара вургем деч посна, йӱштыштӧ 4 минут деч шукырак шогаш ок лий.
