*Empty MediaWiki Message*

--- a/Полшык:Кузе_у_лаштыкым_ышташ.mw
+++ b/Полшык:Кузе_у_лаштыкым_ышташ.mw
@@ -3,7 +3,7 @@
 
 Кузе тый полшен кертат?
 
-Лаштыкым тӧрлаташ ит лӱд — кажне айдеме кеч могай лаштыкым тӧрлатен кертеш. Возгалымаште да тӧрлатымаште тыйын надыретат лийын кертеш. Мом саемден кертат - саемде (мут возымашым, ойлымаш ужашым). Иктаж могай мутым йоҥлыш возымо гын --- тӧрлате. Пудыртымо [[Справка:Кылвер|кылверым]] (ссылка) муынат гын, тӧрлате. У шымлымашым ешарынет гын, [[Справка:Негыз|негыз]] (сноска) дене палемдаш ит мондо. Мо негызеш возенат - палемде. Вара материалын чынжым тергаш йӧн лиеш.
+Лаштыкым тӧрлаташ ит лӱд — кажне айдеме кеч могай лаштыкым тӧрлатен кертеш. Возгалымаште да тӧрлатымаште тыйын надыретат лийын кертеш. Мом саемден кертат - саемде (мут возымашым, ойлымаш ужашым). Иктаж могай мутым йоҥылыш возымо гын --- тӧрлате. Пудыртымо [[Справка:Кылвер|кылверым]] (ссылка) муынат гын, тӧрлате. У шымлымашым ешарынет гын, [[Справка:Негыз|негыз]] (сноска) дене палемдаш ит мондо. Мо негызеш возенат - палемде. Вара материалын чынжым тергаш йӧн лиеш.
 
 Пален лий, Википедийым нигӧ пудыртен ок керт. Кеч могай тӧрлатымашым, вашталтышым мӧҥгешла пӧртылташ да угыч тӧрлаташ лиеш. Кажне тӧрлатымашым администратор-влак тӧрлатат. Вандал-влаклан Википедийыш корным йӧршын петыраш лиеш.
 
