--- a/Каҥашымаш:Глезденёв,_Павел_Петрович.mw
+++ b/Каҥашымаш:Глезденёв,_Павел_Петрович.mw
@@ -20,3 +20,4 @@
 Безусловно, в русскоязычных источниках '''Пагул ача''' более известен под именем '''Глезденёв Павел Петрович''', марийскоязычных просто нет. Да, он поменял имя, но был ли у него выбор в тот момент? Я не против, чтоб назвать статью "Глезденёв Павел Петрович", марийское имя можно указать в статье, но вопрос всё равно спорный. Во-первых, это чуждая традиция, во-вторых, как говорит ПешСай, в поисковике марийский вариант при таком условии не найдётся. Мне ещё непонятна запятая после фамилии, заимствованная из русскоязычной википедии. Я думаю, она нам не нужна. [[Пайдаланыше:Azimbaj|Azimbaj]] 20:50, 13 Пеледыш 2011 (UTC)
 :Глезденёв, Павел Петрович. Моло лӱмлажым статьяштак пуыман. Редиректымат ышташ лиеш - нигӧ ок чаракле. Но Глезденёв, Павел Петрович, мутат уке - тӱҥ! Фамилий деч вара запятойым мыят ом умыло. --[[Пайдаланыше:Cseremisz Elian|Cseremisz Elian]]
 ::Йӧра, айста '''Глезденёв Павел Петрович''' ыштена, запятой деч посна. [[Пайдаланыше:Azimbaj|Azimbaj]] 04:52, 14 Пеледыш 2011 (UTC)
+* Вижу, я для ПешСай как кость в горле )) Попробуйте напишите где-нибудь в Русской или Английской Википедии, что НЕРУССКИЕ и НЕАНГЛИЧАНЕ не имеют права высказываться и влиять на обсуждение! Да Вас заблокируют НАВСЕГДА! Вы себя сами в гроб загоняете своим национализмом. [[Пайдаланыше:Yufereff|Yufereff]] 19:18, 14 Пеледыш 2011 (UTC)
