--- a/Теле_йӱштылмаш.mw
+++ b/Теле_йӱштылмаш.mw
@@ -1,5 +1,5 @@
 [[File:Jak sie kapac.JPG|thumb|260px|Вӱд вакыште "морж"-влак йӱштылыт. [[Польшо]].]]
-'''Теле йӱштылмаш''', '''моржланымаш''' (руш. ''Зимнее плавание'', ''моржевание'') --- почмо вӱдыштӧ телымсе йӱштылмаш. Ий леведын огыл гын, вӱдын температурыжо "[[йӱштӧ]]" (+15 гыч +4 °C марте) категорийыш пура. Ийыште вакым руеныт гын, вӱд ияҥше (ледяная) ( +4 градус гыч -2 марте) категорийыш пура. Тӱрлӧ эллаште телым йӱштылшӧ-влакым тӱрлын лӱмдат. [[Россий]]ыште морж дене таҥастарат гын, [[Финляндий]]ыште - {{comment|[[кома]]|выдра}}, нерпа, тюлень дене, [[Йӱдвел Америке|Йӱдвел Америкыште]] - [[ош маска]] дене таҥастарат.
+'''Теле йӱштылмаш''', '''моржланымаш''' (руш. ''Зимнее плавание'', ''моржевание'') --- почмо вӱдыштӧ телымсе йӱштылмаш. Ий леведын огыл гын, вӱдын температурыжо "[[йӱштӧ]]" (+15 гыч +4 °C марте) категорийыш пура. Ийыште вакым руеныт гын, вӱд ияҥше (ледяная) ( +4 градус гыч -2 марте) категорийыш пура. Тӱрлӧ эллаште телым йӱштылшӧ-влакым тӱрлын лӱмдат. [[Россий]]ыште морж дене таҥастарат гын, [[Финляндий]]ыште - {{comment|[[кома]]|выдра}}, нерпа, тюлень дене, [[Йӱдвел Америка|Йӱдвел Америкыште]] - [[ош маска]] дене таҥастарат.
 
 == Йӱштылмаш нерген ==
 Вакыште вӱд тарванылеш гын - кылмен ок керт. Эн чӱчкыдын тиде тарванылмашым вӱдйымалсе {{comment|туле|насос}} але пропеллер дене ыштат. Вӱдыш пурашлан южо вере олалаште шокшо кӱварым пыштат. А тыге вакыште вӱдыш волашлан оҥа гыч тошкалтышым ыштат. Пураш-лекташ куштылгырак. Тыгеак йӱштылмӧ вер воктене вургемым кудашаш-чияш, солык дене ӱштылалташлан верым чоҥыман. 
