*Empty MediaWiki Message*

--- a/Каҥашымаш:Глезденёв,_Павел_Петрович.mw
+++ b/Каҥашымаш:Глезденёв,_Павел_Петрович.mw
@@ -21,3 +21,4 @@
 :Глезденёв, Павел Петрович. Моло лӱмлажым статьяштак пуыман. Редиректымат ышташ лиеш - нигӧ ок чаракле. Но Глезденёв, Павел Петрович, мутат уке - тӱҥ! Фамилий деч вара запятойым мыят ом умыло. --[[Пайдаланыше:Cseremisz Elian|Cseremisz Elian]]
 ::Йӧра, айста '''Глезденёв Павел Петрович''' ыштена, запятой деч посна. [[Пайдаланыше:Azimbaj|Azimbaj]] 04:52, 14 Пеледыш 2011 (UTC)
 * Вижу, я для ПешСай как кость в горле )) Попробуйте напишите где-нибудь в Русской или Английской Википедии, что НЕРУССКИЕ и НЕАНГЛИЧАНЕ не имеют права высказываться и влиять на обсуждение! Да Вас заблокируют НАВСЕГДА! Вы себя сами в гроб загоняете своим национализмом. [[Пайдаланыше:Yufereff|Yufereff]] 19:18, 14 Пеледыш 2011 (UTC)
+::Уважаемый [[Пайдаланыше:Yufereff|Yufereff]], не обращайте внимания на глупости. Человек может написать, что он - утка, но это не будет значить, что он утка. =) --[[Пайдаланыше:Санюн Вадик|Санюн Вадик]] 06:51, 15 Пеледыш 2011 (UTC)
