*Empty MediaWiki Message*

--- a/Самар_теҥыз.mw
+++ b/Самар_теҥыз.mw
@@ -1,6 +1,6 @@
 {{Теҥыз
  |Лӱм                = {{pagename}}
- |Сӱрет             = Ph general map.png
+ |Сӱрет             = Ph locator map samar island.png
   |Сӱрет лопкыт     = 200px
   |Возымаш                = Филиппин архипелагын картыже
  |lat_dir = N|lat_deg =12 |lat_min = 1|lat_sec = 24
@@ -22,7 +22,7 @@
   |crosses180             = 
  |Категорий Викиклатыште = 
 }}
-'''Са́мар''' ({{lang-en|Samar}}) — Филиппин архипелагыште верланыше теҥыз. Кумдыкшо изи, Самар, Лейте, Масабате да Лусон отро-влак коклаште верланен. Тыныс тептеҥызын теҥызланже шотлалтеш.
+'''Са́мар''' ({{lang-en|''Samar''}}) — [[Филиппин архипелаг]]ыште верланыше [[теҥыз]]. Кумдыкшо изи; Самар, Лейте, Масабате да Лусон [[отро]]-влак коклаште верланен. [[Тыныс тептеҥыз]]ын теҥызланже шотлалтеш.
 
 {{Тыныс тептеҥызын теҥыз-влакше}}
 
