*Empty MediaWiki Message*

--- a/Самар_теҥыз.mw
+++ b/Самар_теҥыз.mw
@@ -1,5 +1,5 @@
 {{Теҥыз
- |Лӱм                = {{pagename}}
+ |Лӱм                = {{PAGENAME}}
  |Сӱрет             = Ph locator map samar island.png
   |Сӱрет лопкыт     = 200px
   |Возымаш                = Филиппин архипелагын картыже
