--- a/Глезденёв,_Павел_Петрович.mw
+++ b/Глезденёв,_Павел_Петрович.mw
@@ -1,4 +1,4 @@
-'''Глезденёв Павел Петрович''' (чоклымаш деч ончыч '''Мендиарын (Мендияров) Ислам-Гарей'''<ref>[http://lumvlak.marlamuter.org/ «Марий лӱмвлак: ойкаҥаш полшык» Крыммарий Азим, 2008г.]</ref>, [[21 Вӱдшор]] [[1867]] — [[28 Ага]] [[1923]]) — [[марий]] {{comment|сотыеҥ|просветитель}}, этнограф. Кресаньык ешыште, [[Тумбагуш]] ялыште, [[Шаранский кундем]]ыште, [[Пошкырт Эл]]ыште шочын. [[1892]] ийыште [[танле тын]]ыш пурен.
+'''Глезденёв Павел Петрович''' (чоклымаш деч ончыч '''Мендиарын (Мендияров) Ислам-Гарей'''<ref>[http://lumvlak.marlamuter.org/ «Марий лӱмвлак: ойкаҥаш полшык» Крыммарий Азим, 2008г.]</ref>, [[21 Вӱдшор]] [[1867]] — [[28 Ага]] [[1923]]) — [[марий]] {{comment|сотыеҥ|просветитель}}, этнограф. Кресаньык ешыште, [[Тумбагуш]] ялыште, [[Шаранский кундем]]ыште, [[Пошкырт Эл]]ыште шочын. [[1892]] ийыште [[танле тын]]ыш пурен. Тугак '''Пагул ача''' семын палыме.
 
 ==Туныктыш==
 * [[1887]] - [[Пӱрӧ (ола)|Пӱрӧсӧ]] туныктышо семинарий,
