*Empty MediaWiki Message*

--- a/Серам_теҥыз.mw
+++ b/Серам_теҥыз.mw
@@ -7,7 +7,7 @@
  |lon_dir = E|lon_deg =128 |lon_min =5 |lon_sec =3 
  |region                  = 
  |CoordScale              = 2000000
- |Верланымаш            = [[Йӱдвел Америка|Йӱдвел Америкын]] [[йӱдвел]]-[[касвел]] серже.
+ |Верланымаш            = Индонезий
   |Кужыт                  = 
   |Лопкыт                 = 
   |Кумдык                = 161 тӱж.
