--- a/Индонезийысе_йылме.mw
+++ b/Индонезийысе_йылме.mw
@@ -1,20 +1,19 @@
 '''Индонезийысе йылме''' ({{lang-id|Bahasa Indonesia}}) — австронезийысе йылме-влак кокла гыч. Индонезийыште [[1945]] ий гыч [[Кугыжаныш йылме|кугыжаныш йылмылан]] шотлалтеш. 20 млн еҥ наре тудын дене кутыра. Йылмым палыше-влакын чотышт — 200 млн наре. Кутыртыш (диалект)-влак уке.
 
 == Фонетика ==
-Тиде йылмыште 26 [[йӱк]] уло. [[Индонезийысе алфавитыште]] 23 йӱкпале уло:
+Тиде йылмыште 26 [[йӱк]] уло. [[Индонезийысе тиштерыште]] 23 йӱкпале уло:
 
 A B C D E F G H I J K L M N O P R S T U V W Z.
 
 == Литератур ==
-* [[Аракин, Владимир Дмитриевич|Аракин В. Д.]] Индонезийский язык, М. — 1965
+* Аракин В. Д. Индонезийский язык, М. — 1965
 * Грамматика индонезийского языка, ред. Аракин В. Д., М. — 1972
 * Карманный индонезийско-русский словарь, ред. Сухадионо, 8000 слов, М. — 1959
-* Большой индонезийско-русский словарь. В 2-х томах. Под редакцией Р. Н. Коригодского. 56 тыс. слов и 48 тыс. словосочетаний. М: [[Русский язык (издательство)|Русский язык]], 1990
-* [[Виктор Погадаев|Погадаев, В. А.]]. Индонезийско-русский и русско-индонезийский словарь. 60 тыс. слов и словосочетаний. М.: [[Русский язык (издательство)|Русский язык]], ИД [[Дрофа]], 2008 ISBN 978-5-9576-0376-4.
+* Большой индонезийско-русский словарь. В 2-х томах. Под редакцией Р. Н. Коригодского. 56 тыс. слов и 48 тыс. словосочетаний. М: Русский язык, 1990
+* Погадаев В.А. Индонезийско-русский и русско-индонезийский словарь. 60 тыс. слов и словосочетаний. М.: Русский язык, ИД [[Дрофа]], 2008 ISBN 978-5-9576-0376-4.
 * Victor Pogadaev. Kamus Rusia-Indonesia, Indonesia-Rusia. Jakarta: P. T. Gramedia Pustaka Utama, 2010. ISBN 978-979-22-4881-4
 
 == Кылвер-влак ==
-{{Interwiki|id|Halaman Utama|индонезийском|}}
 * http://euskara.narod.ru/bahasa/
 * [http://www.muhranoff.ru/362/ Малайский язык]- малай да индонезийысе йылме-влак дене книга.
 
