*Empty MediaWiki Message*

--- a/Сулавеси_теҥыз.mw
+++ b/Сулавеси_теҥыз.mw
@@ -23,7 +23,7 @@
  |Категорий Викиклатыште = 
 }}
 [[Файл:Maitumcoastal.jpg|thumb|200px|Сулавеси теҥызын йӱдвел сер-влакше]]
-'''Сулавеси''' ({{lang-id|Laut Sulawesi}}), '''Целебес теҥыз''' — Тыныс тептеҥызын касвел ужашыштыже верланыше отро-влак кокласе теҥыз. Сулавеси, Калимантан, Манданао, Сангихе отро-влак да Сулу архипелаг коклаште верланен. Теҥызын кумдыкшо 453 тӱж. [[ьеҥ²]], келгыт 6220 [[Метр|м]] марте шуеш.
+'''Сулавеси''' ({{lang-id|Laut Sulawesi}}), '''Целебес теҥыз''' — [[Тыныс тептеҥыз]]ын касвел ужашыштыже верланыше отро-влак кокласе теҥыз. Сулавеси, Калимантан, Манданао, Сангихе отро-влак да Сулу архипелаг коклаште верланен. Теҥызын кумдыкшо 453 тӱж. [[меҥ²]], келгыт 6220 [[Метр|м]] марте шуеш.
 
 Сулу архипелагыште мотко шуко коралл риф уло. Калимантанын серыштыже [[мангр чодра]] кушкеш. Тӱҥ порт-влак — [[Венанг]] Сулавеси отрошто да Таракан (тыгай лӱман отроштак).
 
