*Empty MediaWiki Message*

--- a/Вокализ.mw
+++ b/Вокализ.mw
@@ -1,4 +1,4 @@
-'''Вокали́з''' ({{lang-la|vocalis}} — йоҥгышо, мурышо) — мут деч посна [[йоҥйӱк]]ла дене гына мурымо айдеме [[йӱк]]лык музык [[пьесе]]. Тугак тиде [[термин]] дене мурымаш мастарлык могырым айдеме [[йӱк]]ым вияҥдашлан келыштарыме упражнений-влакым лӱмдат.
+'''Вокали́з''' ({{lang-la|vocalis}} — йоҥгышо, мурышо) — мут деч посна [[йоҥйӱк]]ла дене гына мурымо айдеме [[йӱк]] дене йоҥгалтарашлан музык [[пьесе]]. Тугак тиде [[термин]] дене мурымаш мастарлык могырым айдеме [[йӱк]]ым вияҥдашлан келыштарыме упражнений-влакым лӱмдат.
  
 Вокализ 18-ше курым кыдалне шочын.  [[Мут]] деч посна айдеме [[йӱк]] дене йоҥгалтарыме икымше произведений-влаклан [[Люлли, Жан Батист|Люлли]] ден [[Рамо, Жан Филипп|Рамо]] [[композитор]]-влакын упражненийышт шотлалтыт. Воклиз техникыште возымо упражнений-влак туныктымаште 19-ше курым марте кумдан кучылталтыныт.
 
