--- a/Вокализ.mw
+++ b/Вокализ.mw
@@ -2,7 +2,7 @@
  
 Вокализ 18-ше курым кыдалне шочын.  [[Мут]] деч посна айдеме [[йӱк]] дене йоҥгалтарыме икымше произведений-влаклан [[Люлли, Жан Батист|Люлли]] ден [[Рамо, Жан Филипп|Рамо]] [[композитор]]-влакын упражненийышт шотлалтыт. Воклиз техникыште возымо упражнений-влак туныктымаште 19-ше курым марте кумдан кучылталтыныт.
 
-19-ше курымышто вокализ [[фортепиано]] [[аккомпанент]]ан [[этюд]]-влаклан кӧра популярлыш савырна. Мутлан, ту жапыште [[Конконе, Джузеппе|Джузеппе Конконе]]н вокализше-влак кумдан популярле лийыныт.
+19-ше курымышто вокализ [[фортепиано]] [[аккомпанент]]ан [[этюд]]-влаклан кӧра популярлыш савырна. Мутлан, ту жапыште [[Конконе, Джузеппе|Джузеппе Конкон]]ын вокализше-влак кумдан популярле лийыныт.
 
 Эн палыме вокализ негызеш возымо произведений-влак: [[Рахманинов, Сергей Васильевич|Рахманинов]]ын «[[Вокализ (Рахманинов)|Вокализ]]ше», [[Равель, Морис|М.&nbsp;Равель]]ын «[[Хабанер]]ыже» , [[Вилла-Лобос, Эйтор|Вилла-Лобос]]ын «[[Бразилийсе бахиане|5№-ан Бразилийсе бахиан]]ыже», [[Глиэр, Рейнгольд Морицевич|Р.&nbsp;Глиэр]]ын [[Йӱк]] ден [[оркестр]]лык [[концерт]]ше.
 
