*Empty MediaWiki Message*

--- a/Каҥашымаш:Тӱҥ_лаштык.mw
+++ b/Каҥашымаш:Тӱҥ_лаштык.mw
@@ -36,3 +36,6 @@ Dear friends, may I ask you to add a hyperlink to our Tatar Wikipedia (http://tt
 
 == Работа недели ==
 [[:ru:Википедия:Проект:Словники/Литературы народов России (XX век)|Литературы народов России]] кандидат на [[:ru:Википедия:Кандидаты на работу недели|работу недели]] в Русской Википедии. Приглашаю поддержать.--[[Пайдаланыше:Kaiyr|Kaiyr]] 20:45, 17 Вӱдшор 2011 (UTC)
+
+== Порталы ==
+Уважаемые коллеги, скоро к работе в Википедии подключится Марийский государственный университет. Студенты в плане выполнения курсовых и дипломных работ будут публиковать свои материалы. Преподаватели тоже будут участвовать в наполнении проекта. Прошу вас отнестись к ним лояльно, помогать по мере сил. И к приходу сюда университета, думаю, что стоило бы заняться оформлением Порталов. У нас сейчас вместо них перенаправления на страницы. Предлагаю бросить все наши усилия и мастерство на оформление и создание полноценных порталов по всем имеющимся направлениям, как в Рувики. Чем больше будет красных ссылок, тем лучше. Обращаюсь в первую очередь к опытным участникам. --[[Пайдаланыше:Санюн Вадик|Санюн Вадик]] 05:52, 16 Пеледыш 2011 (UTC)
