--- a/Каҥашымаш:Тӱҥ_лаштык.mw
+++ b/Каҥашымаш:Тӱҥ_лаштык.mw
@@ -39,3 +39,4 @@ Dear friends, may I ask you to add a hyperlink to our Tatar Wikipedia (http://tt
 
 == Порталы ==
 Уважаемые коллеги, скоро к работе в Википедии подключится Марийский государственный университет. Студенты в плане выполнения курсовых и дипломных работ будут публиковать свои материалы. Преподаватели тоже будут участвовать в наполнении проекта. Прошу вас отнестись к ним лояльно, помогать по мере сил. И к приходу сюда университета, думаю, что стоило бы заняться оформлением Порталов. У нас сейчас вместо них перенаправления на страницы. Предлагаю бросить все наши усилия и мастерство на оформление и создание полноценных порталов по всем имеющимся направлениям, как в Рувики. Чем больше будет красных ссылок, тем лучше. Обращаюсь в первую очередь к опытным участникам. --[[Пайдаланыше:Санюн Вадик|Санюн Вадик]] 05:52, 16 Пеледыш 2011 (UTC)
+:Судьба порталов напрямую зависит от пожеланий и возможностей энтузиастов, которые в теме портала разбираются. Будут таковые — будут и порталы. Оформление заимствуем из [[:ru:]], напр. [[:ru:Портал:Генетика]] --[[Пайдаланыше:Denis Sacharnych|Denis Sacharnych]] 06:08, 16 Пеледыш 2011 (UTC)
