--- a/Марий_Эл_(газет).mw
+++ b/Марий_Эл_(газет).mw
@@ -16,8 +16,8 @@
 == Негыз ==
 * [http://mariuverm.wordpress.com/2010/02/03/mari-el-95/#more-1453 MariUver сайтыште статья]
 
-==Ӧрдыж кылвер==
-* [http://www.mariel.org.ru/ Официал сайт]
+==Кылвер==
+* [http://www.mariel.org.ru/ Газетын официалле сайтше]
 
 [[Категорий:Тӱшкаувер йӧнык-влак]]
 
