--- a/Марий_Эл_(газет).mw
+++ b/Марий_Эл_(газет).mw
@@ -14,7 +14,7 @@
 
 [[1917 ий]] Агаште «Война Увэрым» [[Озаҥ]]ыште савыкташ тӱҥалаш темленыт, молан манаш гын Вятка ола марий-влакын тӱшкан илыме кундемлашт деч тора лийын. Ты газетын пытартыш номерже 1917 ий Идым тылзын 15 кечыште лектын.
 == Негыз ==
-* [http://mariuverm.wordpress.com/2010/02/03/mari-el-95/#more-1453 MariUver сайтыште статья]
+* [http://mariuverm.wordpress.com/2010/02/03/mari-el-95/#more-1453 “Марий Эл” газетлан 95 темеш // MariUver]
 
 ==Кылвер==
 * [http://www.mariel.org.ru/ Газетын официалле сайтше]
