*Empty MediaWiki Message*

--- a/Чорновил,_Вячеслав_Максимович.mw
+++ b/Чорновил,_Вячеслав_Максимович.mw
@@ -1,6 +1,5 @@
-[[Файл:В'ячеслав Чорновіл.png|thumb|right|Чорновил, Вячеслав Максимович]]
-'''Чорновил Вячеслав Максимович''' ({{lang-uk|В'ячеслав Максимович Чорновіл}},  {{Шочын|24|12|1937}}, — {{Колен|25|03|1999}}) - украин политик, журналист, русификаций ваштареш толкынын пашаеҥже.
-
+[[Файл:Chornovil Lviv small.jpg|thumb|right|Чорновиллан шарныктыш Львив олаште]]
+'''Чорновил Вячеслав Максимович''' ({{lang-uk|В'ячеслав Максимович Чорновіл}}, {{lang-ru|Вячеслав Максимович Черновол}},  {{Шочын|24|12|1937}}, — {{Колен|25|03|1999}}).
 
 [[be-x-old:Вячаслаў Чарнавіл]]
 [[ca:Viatxeslav Txornovil]]
